test/test_units/test_kclvm/test_types/invalid_test_data/protocol/protocol_1.k
schema DataProtocol:
    data: str

schema Data for DataProtocol:
    x: int = data
